# VibeDFT

./: .gitignore  ASE_INTEGRATION.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: parameter.schema.yaml  qe_plot_bands_dos.py  remotes.yaml
config/materials/: HfBr2-relaxed.yaml  HfBr2.yaml  HfCl2.yaml  HfI2.yaml
docs/: INDEX.md
docs/design/: agent-facing-cli-json.md  architecture.md  cleaned-result-schema.md  command-registry.md  human-decisions.md  language-and-tooling-policy.md  module-synchronization-risk-matrix.md  phonon-task-split.md  qe-learning-to-vibedft-map.md  qe-task-contract.md  v2-contract-stability.md  v2-pr-roadmap.md
docs/reference/: legacy-surface.md  physics_layer_stage_map_v2.md  (+2 more)
profiles/: qe-hfx2-doping-ph24.yaml  qe-hfx2-doping-ph64.yaml  qe-hfx2-elph_q8x8x1_k24x24x1.yaml  qe-hfx2-elph_q8x8x1_k64x64x1.yaml  qe-hfx2-ph_q8x8x1.yaml  qe-hfx2-scf-dos.yaml  qe-hfx2-test.yaml
scripts/: reorg_health_check.py
src/vibedft/: cli.py  (+3 more)
tests/: test_2d_validator.py  test_agent.py  test_analysis.py  test_analyzer_base.py  test_archive.py  test_band_alignment.py  test_bands_advanced.py  test_batch1_detection.py  test_batch2_parsers.py  test_batch3_parsers.py  test_batch4_analyzers.py  test_case_pipeline.py  test_charge_analysis.py  test_cli.py  test_convergence.py  test_decision.py  test_elastic_mechanical.py  test_epw.py  test_fixtures.py  test_fs.py  test_goal_acceptance.py  test_hfcl2_recipes.py  test_hfcl2_rules.py  test_intercalation.py  test_intercalation_rules.py  test_lambda_qv.py  test_md_stability.py  test_phonon.py  test_phonon_modes.py  test_physics_analyzers.py  test_plan.py  test_privacy_audit.py  test_properties.py  test_qa.py  test_qe_output_events.py  test_qe_phonon_monitor.py  test_qe_relax_compare.py  test_qe_relax_monitor.py  test_qe_relax_parse.py  test_qe_scf_monitor.py  (+24 more)
workflows/: WORKFLOW_GRAPH.md  stages.yaml
(+440 files in other folders)
